--- a/loleaflet/css/iframedialog.css
+++ b/loleaflet/css/iframedialog.css
@@ -8,10 +8,10 @@
 .iframe-dialog-modal {
 	height: 424px;
 	width: 448px;
-	border: 1px solid gray;
+	border: 1px solid var(--color-border);
 	box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.15), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.15), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
 	-webkit-box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.15), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
 	border-radius: var(--border-radius);
-	background: white;
+	background: var(--color-background-lighter);
 }
