jssidebar.css use var colors
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I3147a20b4dc242cef118ff2bc152f624a744cdf0

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -87,8 +87,8 @@
 	position: absolute;
 	display: block;
 	width: auto;
-	background-color: #444;
-	color: white;
+	background-color: var(--color-background-darker);
+	color: var(--color-text-darker);
 	padding: 2px 4px;
 	border-radius: var(--border-radius);
 	white-space: nowrap;
