--- a/loleaflet/css/override-vex.css
+++ b/loleaflet/css/override-vex.css
@@ -14,9 +14,9 @@
 	padding: 1px 2px;
 	margin-right: 2px;
 	font-size: 11px;
-	border: thin solid lightgray;
+	border: 1px solid var(--color-border-lighter);
 	background: var(--color-background-lighter);
-	color: gray;
+	color: var(--color-text-lighter);
 	box-sizing: border-box;
 	vertical-align: top;
 	font-weight: bold;
@@ -36,7 +36,7 @@
 	/* TODO: remove specific z-index from our codebase
 	so that the following line can also be removed */
 	z-index: 2000;
-	background-color: #1c5fa814;
+	background-color: var(--color-main-background);
 	min-height: 100%;
 	min-width: 100%;
 	position: absolute;
@@ -155,7 +155,7 @@
 
 .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input{
 	border-radius: var(--border-radius);
-	box-shadow: inset 0 0 2px 0 lightgray;
+	box-shadow: inset 0 0 2px 0 var(--color-box-shadow);
 	box-sizing: border-box;
 }
 
