Mobile Sidebar fix alignments
header-left use max-width instead of min-widt

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Iebadf80864fb70e723bde9269a89d61ec43a2845

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -454,7 +454,7 @@ p.mobile-wizard.ui-combobox-text.selected {
 }
 .ui-header-left {
 	margin-left: 4%;
-	min-width: 42% !important;
+	max-width: 62% !important;
 }
 .ui-header.level-1.mobile-wizard.ui-widget .ui-header-left span.menu-entry-with-icon {
 	vertical-align: middle;
