Mobile Button use color-primary as background color
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I8a80c91f1358c83fe6d4309da91f1bbf539c5f2c

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -939,7 +939,7 @@ input[type='checkbox']#UseBandingColumnStyle, input[type='checkbox']#UseLastColu
 	border-radius: var(--border-radius);
 	color: var(--color-primary-text) !important;
 	font-weight: bold;
-	background-color: var(--color-primary-lighter);
+	background-color: var(--color-primary);
 	border: 1px solid var(--color-primary);
 	margin: 5px 4%;
 	font-size: var(--default-font-size);
