JS Dialogs: Fix regressions background and overlay color
- Make sure overlay stays an overlay and not a solid opaque color
- Make sure dialogs' background is white and not gray
  - Since they appear above the content they shouldn't be darker
- Also make sure Welcome dialog is not gray

related:
6f2be29ab7df147dcdabf0a0c3b3059af952c3f5
4a5b3b6465646802c0be5403d8a6a561961c7df9
08a500e938cef836e777952ec849bcfd5926a0a4

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I4fbaa3f79f7fb1c348b5fe0ef87e98f9007ce007

--- a/loleaflet/css/welcome.css
+++ b/loleaflet/css/welcome.css
@@ -15,5 +15,5 @@
 	box-shadow: 0 0 3px var(--color-box-shadow);
 	border-width: 0;
 	border-radius: var(--border-radius-large);
-	background-color: var(--color-main-background);
+	background-color: var(--color-background-lighter);
 }
