--- a/loleaflet/css/color-palette.css
+++ b/loleaflet/css/color-palette.css
@@ -15,6 +15,7 @@
 	--color-background-darker: #c0bfbc;  /* hover */
 	--color-background-lighter: #fff; /* toolbar, dialog, disabled */
 	--color-background-selected: #CCE8FF;
+	--color-overlay: #1c5fa814;
 
 	--color-primary: #0b87e7; /* border-color */
 	--color-primary-text: #fff; /* text color when primary-lighter is background */
