--- a/loleaflet/css/btns.css
+++ b/loleaflet/css/btns.css
@@ -25,7 +25,7 @@ button.jsdialog {
 	justify-content: end;
 }
 
-.oxool-annotation-edit #annotation-cancel,
+.oxool-annotation-edit [id^='annotation-cancel'],
 .ui-pushbutton.jsdialog:not(#ok):not([id*='select_current']):not(.sidebar),
 .ui-button-box.jsdialog #cancel,
 .ui-button-box.autofilter #cancel,
@@ -52,7 +52,7 @@ button.jsdialog {
 	vertical-align: middle;
 }
 
-.oxool-annotation-edit #annotation-cancel:hover,
+.oxool-annotation-edit [id^='annotation-cancel']:hover,
 .ui-pushbutton.jsdialog:not(#ok):not(.sidebar):hover,
 .ui-button-box.jsdialog #cancel:hover,
 .ui-button-box.autofilter #cancel:hover,
