Simplify CSS for vex btns on mobile, flex
Now with changes from 451d11ebacaa72307ea6b70c57a83544cbd65ce5
change-id: Ia4ab1de407ca7658242282181eeb215fb6dc0d99 we can now safely
target all the vex buttons for mobile without exception

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I660463733fa9e6ce8feb46a08e9217f7c9f414da

--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -379,16 +379,12 @@ button.vex-dialog-button-secondary.vex-dialog-button.vex-last {
 	min-height: 24px !important;
 }
 
-.vex-content.vex-3btns .vex-dialog-buttons {
+.vex-dialog-buttons {
 	flex-direction: column !important;
 }
 
 .vex-close:not(.vex-close-m) {
 	display: none;
-}
-
-.vex-content.vex-3btns .vex-dialog-buttons .vex-dialog-button-cancel {
-	display: block !important;
 }
 
 /* Related to toolbar.css */
