--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -488,13 +488,16 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 }
 
 .annotation-active.modify-annotation-container .oxool-annotation-content-wrapper,
-.annotation-active.reply-annotation-container .oxool-annotation-content-wrapper {
+.annotation-active.reply-annotation-container .oxool-annotation-content-wrapper,
+.oxool-annotation-collapsed.modalpopup {
 	width: 240px;
 }
 
 .oxool-annotation-content {
 	margin: 3px;
 	line-height: 1.4;
+	max-height: 240px;
+	overflow: overlay;
 }
 
 /* 註解串數量 */
