Laptop, mobile: Make it easier to insert text on a new comment
- Increase height of text area when in presence of dialog be that on
mobile or small screen size desktop or tablet for that matter

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I3791cb5ba3cc5ce10d250993b49ba058d0847dfc

--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -617,6 +617,10 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	box-sizing: border-box;
 }
 
+#new-mobile-comment-input-area.oxool-annotation-textarea {
+	height: 240px;
+}
+
 .oxool-div-layer {
 	position: absolute;
 	left: 0;
