Code refactoring: swap annotations' size for CSS var
Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: Id6de428f2182520290424b33f2f7f539c0c09e4c

--- a/loleaflet/css/color-palette.css
+++ b/loleaflet/css/color-palette.css
@@ -45,6 +45,9 @@
 	--default-height: 24px;
 	--header-height: 38px;
 
+	/* Annotations */
+	--annotation-input-size: 240px;
+
 	/*
 		LibreOffice Colors:
 		https://wiki.documentfoundation.org/Marketing/Branding#Colors
