--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -356,6 +356,8 @@ td[id^='tb_editbar_item_sidebar']{
 }
 
 #closebuttonwrapper {
+	order: 99;
+	flex-shrink: 0;
 	width: 37px;
 	height: 32px;
 	background-color: transparent;
@@ -368,7 +370,7 @@ td[id^='tb_editbar_item_sidebar']{
 #closebutton {
 	width: 100%;
 	height: 100%;
-	background: url('images/closedoc.svg') no-repeat 6px 4px/24px !important;
+	background: url('images/closedoc.svg') no-repeat center/24px !important;
 }
 
 .main-nav:not(.hasnotebookbar) ~ #closebuttonwrapper #closebutton {
@@ -1034,6 +1036,7 @@ menu-entry-with-icon.padding-left + menu-entry-icon.width */
 	position: relative;
 	background-color: transparent;
 	display: flex !important;
+	flex-grow: 1;
 	align-items: center;
 	font-family: var(--oxool-font);
 	padding-right: 12px;
