Add missing hover state for primary buttons
Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: Ic1fea0b40bbbcbb6b77bfe29b3df1786da53b7e9

--- a/loleaflet/css/btns.css
+++ b/loleaflet/css/btns.css
@@ -71,6 +71,13 @@ button.jsdialog {
 	vertical-align: middle;
 }
 
+button#ok:hover,
+.cell.jsdialog > button:hover,
+.ui-button-box.jsdialog button:hover,
+[class*='button-primary']:hover {
+	background-color: var(--color-primary-lighter);
+}
+
 .vex.vex-theme-plain .vex-dialog-form .vex-dialog-buttons {
 	margin-right: -5px; /* Account for child element (button)'s margin */
 }
