fixed edit button not appearing in ipads
Signed-off-by: Pranam Lashkari <lpranam@collabora.com>
Change-Id: I949b3bc6d72541cba18867847cd43f0c6e57a32f

--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -915,3 +915,7 @@ div#fontstyletoolbox + div#style.mobile-wizard {
 	width: 100%;
 	height: 100%;
 }
+
+.div-infobar-wrap ~ #mobile-edit-button {
+	display: none;
+}
