Improve edit button visibility when infobar, snackbar is present
Before we were showing edit button only if the snackbar was not present
in the DOM. The goal here was to avoid overlapping elements (bar + FAB).

However and since the infobar can be present in the DOM but set to
display none this would cause another problem: no edit button and no
infobar visible to the user.

Solution:
 - Make use of the existent css class .hidden (which sets it to display
 none) so we can then in the css side show the Edit FAB only after them
 snacbar is dismissed.

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I31be2dfeb1bcb08b971074466a24db719320f8f4

--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -916,6 +916,6 @@ div#fontstyletoolbox + div#style.mobile-wizard {
 	height: 100%;
 }
 
-.div-infobar-wrap ~ #mobile-edit-button {
+.div-infobar-wrap:not(.hidden) ~ #mobile-edit-button {
 	display: none;
 }
