change blinking cursor color to black
now, it uses a css theme variable for the color
but it is a kind of light grayish and it is harder
to see in a crowded document.

Signed-off-by: Mert Tumer <mert.tumer@collabora.com>
Change-Id: Iec5a7efdb4cb385512226841b036eba3b3212427

--- a/loleaflet/css/leaflet.css
+++ b/loleaflet/css/leaflet.css
@@ -658,7 +658,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @keyframes blink {
 	from, to {
-		background: var(--color-background-darker);
+		background: #000;
 	}
 	50% {
 		background: transparent;
@@ -667,7 +667,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @-moz-keyframes blink {
 	from, to {
-		background: var(--color-background-darker);
+		background: #000;
 	}
 	50% {
 		background: transparent;
@@ -676,7 +676,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @-webkit-keyframes blink {
 	from, to {
-		background: var(--color-background-darker);
+		background: #000;
 	}
 	50% {
 		background: transparent;
@@ -685,7 +685,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @-ms-keyframes blink {
 	from, to {
-		background: var(--color-background-darker);
+		background: #000;
 	}
 	50% {
 		background: transparent;
@@ -694,7 +694,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @-o-keyframes blink {
 	from, to {
-		background: var(--color-background-darker);
+		background: #000;
 	}
 	50% {
 		background: transparent;
