Mobilewizard: Update hidden elements rules
Some elements were being on purposed set to be hidden but the ids have
changed and now the sufix img was added and so the CSS were not taking
affect anymore:
https://archive.org/download/cool-bug-mwizard-base64images/cool-bug-mwizard-base64images.png

Add sufix, update rules

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I0adf33dc64db70138e3530441137bf74275424ce

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -1229,11 +1229,11 @@ label.disabled {
 }
 
 /* Paragraph properties */
-#mobile-wizard #paraspacing + #image6,
-#mobile-wizard #aboveparaspacing + #image7,
-#mobile-wizard #indent + #image8,
-#mobile-wizard #beforetextindent + #image9,
-#mobile-wizard #aftertextindent + #image10 {
+#mobile-wizard #paraspacingimg,
+#mobile-wizard #aboveparaspacingimg,
+#mobile-wizard #indentimg,
+#mobile-wizard #beforetextindentimg,
+#mobile-wizard #aftertextindentimg {
 	display: none;
 }
 
