Mobilewizard: hide firstlineident base64 img
Add to elements that should be hidden on mobile

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I16a39b81ec969bc847b92708486b729baddc0c5e

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -1232,6 +1232,7 @@ label.disabled {
 #mobile-wizard #paraspacingimg,
 #mobile-wizard #aboveparaspacingimg,
 #mobile-wizard #belowparaspacingimg,
+#mobile-wizard #firstlineindentimg,
 #mobile-wizard #indentimg,
 #mobile-wizard #beforetextindentimg,
 #mobile-wizard #aftertextindentimg {
