Fix mobile hamburger menu color
Due to recent changes on the color palette mobile wizard has changed
color from white to gray which causes the hamburger menu to appear not
going full height:
https://archive.org/download/cool-bug-mobile-hamburger-bg/cool-bug-mobile-hamburger-bg.png

Make sure hamburger menu uses the right color

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I4263ebf8f92979ffd5a5657fceb76843594d4d54

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -279,6 +279,7 @@ p.mobile-wizard.ui-combobox-text.selected {
 
 #mobile-wizard.menuwizard {
 	z-index: 1001;
+	background-color: var(--color-background-lighter);
 }
 
 #mobile-wizard-content *{
