--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -286,7 +286,7 @@ td.jsdialog .jsdialog.cell.sidebar {
 }
 
 /* non selected */
-#clearFormatting, #FormatPaintbrush,
+#clearFormatting
 .hasnotebookbar .ui-content.unotoolbutton.has-label,
 .hasnotebookbar .ui-content.unotoolbutton.inline,
 .hasnotebookbar .ui-content.unotoolbutton:not(.has-label):not(.inline),
