jsdialog: add symbols support for buttons
- symbols are standard images for buttons
- are shown as images: "symbol_<SYMBOL_NAME>.svg"

Signed-off-by: Szymon Kłos <szymon.klos@collabora.com>
Change-Id: I034c07ad299376837f65726f7ec1bceabb50ba01

--- a/loleaflet/css/btns.css
+++ b/loleaflet/css/btns.css
@@ -18,6 +18,11 @@ button.jsdialog {
 	opacity: 0.7;
 }
 
+/*limit icon to button height*/
+button.jsdialog img {
+	max-height: 100%;
+}
+
 .annotation-btns-container,
 .vex-dialog-buttons {
 	display: flex;
