feedback dialog gets beyond the screen when keyboard is open
Signed-off-by: Mert Tumer <mert.tumer@collabora.com>
Change-Id: I7360ee28d1bd4c5be7412344591029b7e18fbd9e

--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -846,8 +846,7 @@ td[id^='tb_spreadsheet-toolbar_item']:focus table.w2ui-button div.w2ui-icon, td[
 	bottom: 0;
 }
 @media  only screen
-	and (max-height: 500px)
-	and (orientation: landscape)  {
+	and (max-height: 500px) {
 	.iframe-dialog-content {
 		height: 100%;
 	}
