--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -399,6 +399,7 @@
 #stylesview .ui-iconview-entry {
 	width: 30%;
 	box-sizing: border-box;
+	padding-top: 0px;
 }
 
 #stylesview .ui-iconview-entry.selected {
