Update welcome screen for smaler sizes and mobile
devices-mobiles.css
- rules for mobile wasn't needed
  everywthing is in welcome.css

welcome.css
- screen behind welcome dialog use --color-overlay
  as at every dialog
- no fixed width and height
  max-width and max-height was the old width/height
  width and height are now 95%
  dialog window was center justify
- content width is 96%
  when smaler than 500px padding was added to <p>
- fig get top an bottom margin
  so now all fig's have the same height
- hyperlinks use --color-primary
  and not underline
Signed-off-by: andreas kainz <kainz.a@gmail.com>

Change-Id: If921bc2abc3977930f7d60256d8011d8986a22c9

--- a/loleaflet/css/welcome.css
+++ b/loleaflet/css/welcome.css
@@ -1,4 +1,5 @@
-.iframe-welcome-wrap {
+.iframe-welcome-wrap,
+.iframe-welcome-content {
 	position: absolute;
 	z-index: 1106;
 	display: flex;
@@ -6,11 +7,17 @@
 	height: 100%;
 	justify-content: center;
 	align-items: center;
+	background-color: var(--color-overlay);
 }
 
 .iframe-welcome-modal {
-	height: 512px;
-	width: 700px;
+	display: flex;
+	width: 95%;
+	height: 95%;
+	max-width: 700px;
+	max-height: 512px;
+	justify-content: center;
+	align-items: center;
 	-webkit-box-shadow: 0 0 3px var(--color-box-shadow);
 	box-shadow: 0 0 3px var(--color-box-shadow);
 	border-width: 0;
