--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -609,6 +609,9 @@ button.leaflet-control-search-next
 	border: 1px solid transparent;
 	color: var(--color-main-text);
 }
+.w2ui-toolbar table.w2ui-button:hover {
+	background-color: var(--color-border-darker);
+}
 .w2ui-toolbar table.w2ui-button.over {
 	border: 1px solid var(--color-border-darker) !important;
 }
@@ -1160,3 +1163,4 @@ html[dir='rtl'] #userListPopover::after {
 	font-size: var(--default-font-size);
 	color: var(--color-main-text);
 }
+
