--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -207,7 +207,7 @@ body {
 	display: none;
 	background: var(--gray-light-bg-color);
 	position: relative;
-	border-left: 1px solid var(--color-border);
+	border-inline-start: 1px solid var(--color-border);
 	overflow: hidden;
 	z-index: 990;
 }
