--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -55,7 +55,7 @@
 	font-size: var(--default-font-size);
 	color: var(--color-text-dark);
 	margin: 5px;
-	position: relative;
+	position: absolute;
 	margin-inline-start: calc(-40px);
 }
 
