Refactoring and generalize spinfield: share more CSS
Avoid to place rules within jssidebar.css that should be global
(it should affect any jsdialog class) and let jssidebar-only exceptions
in jssidebar file

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: Ib950f5c13522f3d91139d8eac52b5b4daa22fe05

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -422,6 +422,28 @@ input[type='checkbox']:checked.autofilter, .jsdialog input[type='checkbox']:chec
 .jsdialog input[type='radio'][disabled='disabled'] ~ label {
 	color: var(--color-text-lighter);
 }
+/* spinfield */
+
+.spinfieldcontainer input:hover {
+	border: 1px solid var(--color-border-darker);
+	color: var(--color-text-darker);
+	background-color: var(--color-background-lighter);
+}
+
+.spinfield {
+	padding: 4px 0 4px 4px;
+	height: 28px;
+	box-sizing: border-box;
+	margin-right: 1px;
+}
+
+.spinfieldunit {
+	font-size: var(--default-font-size);
+	color: var(--color-text-dark);
+	margin: 5px;
+	position: absolute;
+	margin-inline-start: calc(-40px);
+}
 /* spinfield (number) */
 input[type='number'] {
 	padding-top: 0 !important;
