JSdialog: Don't add margins to multiple inner containers
Example: macro select dialog is getting set with multiple inner margins
- Simplify the CSS so we only target one sub element
- Remove unnecessary code (no need to add exception for sidebar and
formulabar)

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: Ibc35e6b8c37badbbe27b411c21986ddda0e27ef3
Signed-off-by: Gökay Şatır <gokaysatir@collabora.com>

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -21,7 +21,7 @@
 	z-index: 2001;
 }
 
-.jsdialog.root-container:not(.autofilter):not(.sidebar) {
+.lokdialog > .jsdialog.root-container:not(.autofilter) {
 	margin: .5em 1em; /*same as in .ui-dialog */
 }
 
