--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -408,6 +408,7 @@ input[type='checkbox']:checked.autofilter, .jsdialog input[type='checkbox']:chec
 .jsdialog input[type='radio'] {
 	vertical-align: middle;
 	margin: 0px 3px 0px 2px;
+	border: none;
 }
 
 .jsdialog .radiobutton > label {
