--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -37,7 +37,7 @@
 }
 
 .jsdialog-container .ui-dialog-content {
-	background-color: var(--color-main-background) !important;
+	background-color: var(--color-background-lighter) !important;
 	font-family: var(--oxool-font);
 	line-height: 1.5;
 }
