Use var(--border-radius)
add a --border-radius: 4px value
and use it for sidebar and notebookbar
other stuff will follow, but I want to test where the value was visible
selected-inline values in notebookbar use border-radius

**test change**
- use notebookbar in writer
- goto tab review
- Automatic Spell Checking use now the border-radius: 4px

--- a/loleaflet/css/color-palette.css
+++ b/loleaflet/css/color-palette.css
@@ -10,6 +10,8 @@
 	--gray-color: #b6b6b6;
 	--white-bg-color: #fff;
 
+	--border-radius: 4px;
+
 	/*
 		LibreOffice Colors:
 		https://wiki.documentfoundation.org/Marketing/Branding#Colors
