--- a/loleaflet/css/device-tablet.css
+++ b/loleaflet/css/device-tablet.css
@@ -160,12 +160,12 @@
 	margin: 0;
 }
 
-#loolwsd-version span:before,
+#oxoolwsd-version span:before,
 #lokit-version > span:before {
 	content: ' (';
 	white-space: pre;
 }
-#loolwsd-version span:after,
+#oxoolwsd-version span:after,
 #lokit-version > span:after {
 	content: ')';
 }
