fix prefix 'cool' to 'oxool'

--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -438,7 +438,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	position: absolute;
 	left: 0 !important;
 }
-.cool-annotation.annotation-active.rtl .cool-annotation-collapsed{
+.oxool-annotation.annotation-active.rtl .oxool-annotation-collapsed{
 	position: absolute;
 	left: 48px !important;
 }
