--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -1,5 +1,6 @@
 #main-menu {
-	top: 3px;
+	top: 0px;
+	height: auto;
 	z-index: auto;
 	outline: none;
 	float: left;
@@ -10,7 +11,7 @@
 }
 
 #main-menu.readonly {
-	top: 3px;
+	top: 0px;
 }
 
 #document-header {
@@ -69,6 +70,7 @@
 	white-space: nowrap;
 	/*z-index: 12;*/
 	display: flex;
+	align-items: center;
 }
 .main-nav.readonly {
 	position: relative;
