Use variables for text colors
there are 3 color var's added

var(--color-main-text)
this is the default text color EVERYWHERE

var(--color-text-accent)
will be used when a label was selected, or during hover
also for the filename accent text color was used

var(--color-text-lighter)
was use for saved date or when a label was disabled

PR was tested for classic and notebookbar
for the sidebar and dropdown elements.

--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -205,7 +205,7 @@ body {
 
 #sidebar-dock-wrapper {
 	display: none;
-	background: #fff;
+	background: #eee;
 	position: relative;
 	border-top: 1px solid var(--gray-color);
 	border-left: 1px solid var(--gray-color);
