--- a/loleaflet/css/color-palette.css
+++ b/loleaflet/css/color-palette.css
@@ -10,9 +10,13 @@
 	--gray-color: #b6b6b6;
 	--white-bg-color: #fff;
 
-	--color-main-background: #fff;
-	--color-border: #b6b6b6;
+	--color-main-text: #696969;
+	--color-text-accent: #333333;
+	--color-text-lighter: #636363;
 
+	--color-main-background: #fff;
+
+	--color-border: #b6b6b6;
 	--border-radius: 4px;
 
 	/*
