--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -147,14 +147,14 @@
 
 .lo-menu a, .lo-menu a:hover, .lo-menu a:focus, .lo-menu a:active, .lo-menu a.highlighted {
 	padding: 5px 32px 5px 48px;
-	color: #000;
+	color: var(--color-text-accent);
 }
 .lo-menu a:hover, .lo-menu a:focus, .lo-menu a:active, .lo-menu a.highlighted {
 	background: var(--doc-identify-color);
 	color: #fff;
 }
 .lo-menu a:hover.disabled {
-	background: #e0e0e0;
+	color: var(--color-text-lighter);
 }
 .lo-menu > li, .lo-menu > li > .disabled {
 	background: transparent; /* top-level menus remain greyish */
@@ -166,7 +166,7 @@
 
 .lo-menu > li > a:hover, .lo-menu > li > a:focus, .lo-menu > li > a:active, .lo-menu > li > a.highlighted {
 	background-color: #fff;
-	color: #000;
+	color: var(--color-text-accent);
 	border-color: #bbbbbb;
 	border-bottom: 1px solid #bbb;
 }
@@ -399,7 +399,9 @@ li .disabled .keyboard {
 
 #menu-last-mod a {
 	font-size: 12px;
+	color: var(--color-text-lighter);
 	text-decoration: underline;
+	padding: 8px 15px 7px;
 }
 
 
