--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -13,7 +13,7 @@
 }
 
 .ui-tab.notebookbar {
-	font-size: 16px;
+	font-size: 12pt;
 	font-family: var(--oxool-font);
 	line-height: normal;
 	color: #fff;
@@ -286,10 +286,10 @@
 }
 
 .unotoolbutton.notebookbar .unolabel {
+	font-size: 12pt;
 	font-family: var(--oxool-font);
-	font-size: 14px;
-	color: var(--gray-light-txt--color);
-	padding: 0 !important;
+	color: var(--color-main-text);
+	padding: 0px 5px !important;
 }
 
 /*Adjust arrow for statistics menu (has icon, label stacked up)*/
