--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -22,6 +22,10 @@
 }
 #toolbar-down *{
 	font-family: var(--oxool-font);
+	color: var(--color-main-text);
+}
+#toolbar-down *:hover {
+	color: var(--color-text-accent);
 }
 #toolbar-down table {
 	background: var(--color-main-background);
@@ -243,6 +247,7 @@ w2ui-toolbar {
 }
 
 #document-name-input {
+	color: var(--color-text-accent);
 	font-size: 16px;
 	border: 1px solid transparent;
 	background-color: transparent;
@@ -464,9 +469,14 @@ button.leaflet-control-search-next
 .select2-container--default .select2-selection--single,
 .sidebar.jsdialog.ui-listbox {
 	background-color: var(--gray-lighter-bg-color);
+	color: var(--color-main-text);
 }
 .select2-container--default .select2-selection--single .select2-selection__rendered {
 	line-height: 24px;
+	color: var(--color-main-text);
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered:hover {
+	color: var(--color-text-accent);
 }
 .styles-select {
 	width: 150px !important;
@@ -549,6 +559,7 @@ button.leaflet-control-search-next
 .w2ui-toolbar table.w2ui-button.checked:hover {
 	background-color: var(--gray-light-bg-color);
 	border: 1px solid var(--gray-light-txt--color);
+	color: var(--color-text-accent);
 }
 
 .w2ui-icon.basicshapes_ellipse { background: url('images/cmd/ellipse.svg') no-repeat center !important; }
@@ -911,6 +922,11 @@ button.leaflet-control-search-next
 	background-color: rgba(128, 128, 128, 0.1);
 	position: static;
 	line-height: 20px;
+	color: var(--color-main-text);
+}
+
+.insertshape-grid:hover div {
+	color: var(--color-text-accent);
 }
 
 .insertshape-grid .col:hover {
