--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -109,6 +109,7 @@
 	justify-content: space-between;
 	width: 290px;
 	align-items: center;
+	background: #ddd;
 }
 
 #selectcolor {
@@ -190,8 +191,8 @@ div#box5.row.jsdialog.sidebar > .sidebar.jsdialog.cell {
 
 .sidebar.ui-expander-label {
 	color: var(--color-main-text);
-	font-size: 11px;
-	line-height: 23px;
+	font-size: 12px;
+	line-height: 22px;
 	font-weight: bold;
 	padding-left: 14px;
 	padding-right: 14px; /* for RTL mode */
@@ -199,7 +200,7 @@ div#box5.row.jsdialog.sidebar > .sidebar.jsdialog.cell {
 
 .sidebar.ui-expander-label:before {
 	position: absolute;
-	margin-inline-start: -16px;
+	margin-inline-start: -12px;
 	left: unset !important;
 }
 
@@ -290,6 +291,7 @@ td.jsdialog .jsdialog.cell.sidebar {
 	display: block;
 	width: 10px;
 	height: 10px;
+	margin-right: 4px;
 }
 
 .ui-expander.jsdialog.sidebar .ui-expander-icon-right img {
