last-mod string removed underline and add hover accent color
if you hover over the last-mod string the color switch from
var(--color-text-lighter) to var(--color-text-accent).

In addition the text-decoration: underline was removed
cause it use text-lighter the focus shouldn't be there
with an underline.

--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -400,10 +400,13 @@ li .disabled .keyboard {
 #menu-last-mod a {
 	font-size: 12px;
 	color: var(--color-text-lighter);
-	text-decoration: underline;
 	padding: 8px 15px 7px;
+	border: 1px solid transparent;
 }
 
+#menu-last-mod a:hover {
+	color: var(--color-text-accent);
+}
 
 /* For classic mode */
 #main-menu .freemium-disabled, #menu-nb-hamburger .freemium-disabled {
