--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -140,9 +140,7 @@
 	padding-right: 12px;
 	padding-top: 5px;
 	/* z-index: 400; */
-	border-left: 1px solid transparent;
-	border-right: 1px solid transparent;
-	border-top: 1px solid transparent;
+	border: 1px solid transparent;
 }
 
 .lo-menu a, .lo-menu a:hover, .lo-menu a:focus, .lo-menu a:active, .lo-menu a.highlighted {
