--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -96,7 +96,7 @@
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
-	/* background: #ffffff; */
+	background: var(--color-main-background);
 	-webkit-touch-callout: none; /* iOS Safari */
 	-webkit-user-select: none;   /* Chrome/Safari/Opera */
 	-khtml-user-select: none;    /* Konqueror */
@@ -159,14 +159,16 @@
 	border-left-color: transparent;
 }
 .lo-menu > li .disabled {
-	color: var(--gray-color);
+	color: var(--color-text-lighter);
 }
-
+.lo-menu > li .disabled:hover {
+	background-color: var(--color-background-lighter);
+}
 .lo-menu > li > a:hover, .lo-menu > li > a:focus, .lo-menu > li > a:active, .lo-menu > li > a.highlighted {
-	background-color: #fff;
-	color: var(--color-text-accent);
-	border-color: #bbbbbb;
-	border-bottom: 1px solid #bbb;
+	background: var(--color-background-darker);
+	color: var(--color-text-darker);
+	border-color: var(--color-border-darker);
+	border-bottom: 1px solid var(--color-border-darker);
 }
 
 /* menubar 頂端文字 */
@@ -191,8 +193,8 @@
 	display: none;
 }
 .lo-menu ul {
-	border: 1px solid #bbbbbb;
-	background: white;
+	border: 1px solid var(--color-border);
+	background: var(--color-main-background);
 }
 .lo-menu ul a span.sub-arrow {
 	right: 0;
@@ -216,7 +218,7 @@
 	margin-top: 3px;
 	margin-bottom: 3px;
 	display: block;
-	border-bottom: 1px solid #bbbbbb;
+	border-bottom: 1px solid #ddd;
 }
 
 .menuicon, .menuicon:hover {
