--- a/loleaflet/css/spreadsheet.css
+++ b/loleaflet/css/spreadsheet.css
@@ -27,14 +27,15 @@
 	font: 13px var(--oxool-font);
 	display: inline-block;
 	border: 1px solid darkgrey;
-	background-color: #fff;
-	color: #000;
+	border-radius: var(--border-radius);
+	background: var(--color-main-background);
+	color: var(--color-main-text);
 }
 
 .spreadsheet-tab.spreadsheet-tab-selected {
-	background: white !important;
-	color: black !important;
-	border: 1px solid #000;
+	background: var(--color-background-dark) !important;
+	color: var(--color-text-dark) !important;
+	border: 1px solid var(--color-border-dark);
 	border-bottom: 4px solid #444444;
 }
 
