--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -74,7 +74,7 @@
 }
 .main-nav.readonly {
 	position: relative;
-	border-bottom: 1px solid var(--gray-light-bg-color);
+	border-bottom: 1px solid var(color-border);
 }
 .main-nav.hasnotebookbar {
 	height: 32px;
