loleaflet CSS: 調色盤新增兩項配色，並修改選單、工具列及 Sidebar 部份配色
--color-text-disabled : 選項被 disabled 時顯示的顏色
用於選單

--color-background-selected: 按鈕被選取時顯示的顏色
用於工具列及 Sidebar

--- a/loleaflet/css/color-palette.css
+++ b/loleaflet/css/color-palette.css
@@ -12,11 +12,13 @@
 	--color-text-dark: #333333;  /* select */
 	--color-text-darker: #000;  /* hover */
 	--color-text-lighter: #696969;
+	--color-text-disabled: #BBBBBB;
 
 	--color-main-background: #fff;
 	--color-background-dark: #F7F7F7;  /* select */
 	--color-background-darker: #e4e4e4;  /* hover */
 	--color-background-lighter: #f8f9fa;
+	--color-background-selected: #CCE8FF;
 
 	--color-primary: #1C99E0;
 	--color-primary-text: #fff;
