--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -160,7 +160,7 @@
 }
 .lo-menu > li .disabled {
 	background: var(--color-main-background);
-	color: var(--color-text-lighter);
+	color: var(--color-text-disabled);
 }
 .lo-menu > li .disabled:hover {
 	background-color: var(--color-background-lighter);
