color-palette UI elements update
- color-main-background LibO document background was used
- color-main-backgroud was used for all elements
- only select, hover and toolbar's use other background colors
- color-background-lighter is the color for toolbars
- better contrast for select stuff

--- a/loleaflet/css/impress.css
+++ b/loleaflet/css/impress.css
@@ -7,5 +7,5 @@
 	background: transparent !important;
 }
 #presentation-controls-wrapper {
-	background: var(--color-background-dark) !important;
+	background: var(--color-main-background) !important;
 }
