--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -174,7 +174,7 @@
 }
 
 #toolbar-wrapper.hasnotebookbar {
-	background: var(--color-main-background);
+	background: var(--color-background-lighter);
 	position: relative;
 	z-index: 11;
 }
