--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -62,7 +62,7 @@
 	display: none;
 }
 .main-nav {
-	height: 32px; /* on mouseover menubar items, border emerges */
+	height: var(--header-height); /* on mouseover menubar items, border emerges */
 	width: auto;
 	background: var(--doc-identify-color);
 	padding: 0;
@@ -76,7 +76,7 @@
 	border-bottom: 1px solid var(color-border);
 }
 .main-nav.hasnotebookbar {
-	height: 32px;
+	height: var(--header-height);
 	overflow: scroll hidden;
 	scrollbar-width: none;
 	-ms-scrollbar: none;
