--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -227,7 +227,7 @@
 }
 
 .unotoolbutton.notebookbar .unolabel {
-	font-size: 12pt;
+	font-size: var(--default-font-size);
 	font-family: var(--oxool-font);
 	color: var(--color-main-text);
 	padding: 0px 5px !important;
