--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -298,7 +298,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 
 .oxool-font {
 	font-family: var(--oxool-font) !important;
-	font-size: 12px !important;
+	font-size: var(--default-font-size) !important;
 	font-weight: normal !important;
 	padding: 3px 5px 3px 3px;
 }
