--- a/loleaflet/css/spreadsheet.css
+++ b/loleaflet/css/spreadsheet.css
@@ -26,7 +26,7 @@
 
 	font: 13px var(--oxool-font);
 	display: inline-block;
-	border: 1px solid darkgrey;
+	border: 1px solid transparent;
 	border-radius: var(--border-radius);
 	background: var(--color-main-background);
 	color: var(--color-main-text);
@@ -96,7 +96,7 @@
 
 .spreadsheet-header-corner-styles {
 	border: 1px solid darkgray;
-	font: 12px/1.5 var(--oxool-font);
+	font: var(--default-font-size)/1.5 var(--oxool-font);
 	color: black;
 	background-color: #f1f4f7;
 	cursor: pointer;
@@ -129,7 +129,7 @@
 
 .spreadsheet-header-column {
 	border: 1px solid darkgray;
-	font: 12px/1.5 var(--oxool-font);
+	font: var(--default-font-size)/1.5 var(--oxool-font);
 	color: black;
 	background-color: #f1f4f7;
 	cursor: pointer;
@@ -171,7 +171,7 @@
 
 .spreadsheet-header-row {
 	border: 1px solid darkgray;
-	font: 12px/1.5 var(--oxool-font);
+	font: var(--default-font-size)/1.5 var(--oxool-font);
 	color: black;
 	background-color: #f1f4f7;
 	cursor: pointer;
