--- a/loleaflet/css/spreadsheet.css
+++ b/loleaflet/css/spreadsheet.css
@@ -26,7 +26,7 @@
 
 	font: 13px var(--oxool-font);
 	display: inline-block;
-	border: 1px solid transparent;
+	border: 1px solid var(--color-border-dark);
 	border-radius: var(--border-radius);
 	background: var(--color-main-background);
 	color: var(--color-main-text);
