--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -165,7 +165,7 @@
 	background-color: var(--color-background-lighter);
 }
 .lo-menu > li > a:hover, .lo-menu > li > a:focus, .lo-menu > li > a:active, .lo-menu > li > a.highlighted {
-	background: var(--color-background-darker);
+	background: var(--color-main-background);
 	color: var(--color-text-darker);
 	border-color: var(--color-border-darker);
 	border-bottom: 1px solid var(--color-border-darker);
