--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -324,6 +324,27 @@ input[type='checkbox']:checked.autofilter, .jsdialog input[type='checkbox']:chec
 	border: 1px solid #888;
 	box-shadow: 0 0 2px 0 #777;
 }
+
+/* context menu */
+.context-menu-list {
+	background: var(--color-background-lighter);
+	border: 1px solid var(--color-border-dark);
+	border-radius: var(--border-radius);
+	-webkit-box-shadow: 0 0 3px var(--color-box-shadow);
+	box-shadow: 0 0 3px var(--color-box-shadow);
+}
+.context-menu-item {
+	color: var(--color-main-text);
+	background-color: transparent;
+}
+.context-menu-separator {
+	border-bottom: 1px solid var(--color-border-lighter);
+}
+
+.context-menu-item.context-menu-disabled {
+	color: var(--color-text-lighter);
+	background-color: var(--color-background-lighter);
+}
 /* input text */
 
 .jsdialog.ui-edit {
