--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -1012,7 +1012,7 @@ tr.useritem > td > img {
 
 .context-menu-link {
 	text-decoration: none;
-	color: black;
+	color: var(--color-main-text);
 	width: 100%;
 }
 .menu-entry-icon {
