--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -502,7 +502,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 
 /* 註解串數量 */
 .oxool-annotation-reply-count-collapsed {
-	background-color: var(--color-primary-lighter);
+	background-color: var(--color-primary);
 	color: var(--color-primary-text);
 	font-weight: bold;
 	font-family: var(--oxool-font);
@@ -519,10 +519,6 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 
 #main-document-content {
 	z-index: 0;
-}
-
-#main-document-content .oxool-annotation-reply-count-collapsed {
-	background: rgb(var(--color-primary));
 }
 
 .oxool-annotation-collapsed {
