--- a/loleaflet/css/color-palette.css
+++ b/loleaflet/css/color-palette.css
@@ -12,8 +12,8 @@
 
 	--color-main-background: #F8F9FA;
 	--color-background-dark: #e8e8e8;  /* select */
-	--color-background-darker: #c0bfbc;  /* hover */
-	--color-background-lighter: #fff; /* toolbar, dialog, disabled */
+	--color-background-darker: #c0bfbc;  /* todo: apply to pressed (active), li:hover(top menu on classic mode)*/
+	--color-background-lighter: #fff; /* hover, toolbar, dialog, disabled */
 	--color-background-selected: #CCE8FF;
 	--color-overlay: #1c5fa814;
 
